project2_Parser/edu/purdue/cs352/minijava/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
    package edu.purdue.cs352.minijava.parser;

    import java.util.*;

    public class Parser implements ParserConstants {
        public static void main(String[] args) {
            Parser parser;

            if (args.length != 1) {
                System.out.println("Use: mjparse <input file>");
                return;
            }

            try {
                parser = new Parser(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try {
                parser.Program();
            } catch (ParseException ex) {
                System.out.println(ex.getMessage());
                return;
            }
        }

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
  final public List<Token> TokenList() throws ParseException {Token t;
    List<Token> tl = new ArrayList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:
      case KW_PUBLIC:
      case KW_STATIC:
      case KW_VOID:
      case KW_MAIN:
      case KW_STRING:
      case KW_EXTENDS:
      case KW_RETURN:
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_ELSE:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_RBRACE:
      case SYM_LPARENTHESE:
      case SYM_RPARENTHESE:
      case SYM_LBRACKET:
      case SYM_RBRACKET:
      case SYM_SEMICOLON:
      case SYM_EQUAL:
      case SYM_AND:
      case SYM_OR:
      case SYM_LESS:
      case SYM_LESSEQUAL:
      case SYM_EQUALEQUAL:
      case SYM_NOTEQUAL:
      case SYM_GREATER:
      case SYM_GREATEREQUAL:
      case SYM_PLUS:
      case SYM_MINUS:
      case SYM_MULTIPLICATION:
      case SYM_DIVIDE:
      case SYM_MOD:
      case SYM_NOT:
      case SYM_DOT:
      case SYM_COMMA:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Token();
tl.add(t);
    }
    jj_consume_token(0);
{if ("" != null) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public Token Token() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_CLASS:{
      jj_consume_token(KW_CLASS);
      break;
      }
    case KW_PUBLIC:{
      jj_consume_token(KW_PUBLIC);
      break;
      }
    case KW_STATIC:{
      jj_consume_token(KW_STATIC);
      break;
      }
    case KW_VOID:{
      jj_consume_token(KW_VOID);
      break;
      }
    case KW_MAIN:{
      jj_consume_token(KW_MAIN);
      break;
      }
    case KW_STRING:{
      jj_consume_token(KW_STRING);
      break;
      }
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      break;
      }
    case KW_RETURN:{
      jj_consume_token(KW_RETURN);
      break;
      }
    case KW_INT:{
      jj_consume_token(KW_INT);
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      break;
      }
    case KW_ELSE:{
      jj_consume_token(KW_ELSE);
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      break;
      }
    case KW_PRINT:{
      jj_consume_token(KW_PRINT);
      break;
      }
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      break;
      }
    case SYM_RBRACE:{
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case SYM_LPARENTHESE:{
      jj_consume_token(SYM_LPARENTHESE);
      break;
      }
    case SYM_RPARENTHESE:{
      jj_consume_token(SYM_RPARENTHESE);
      break;
      }
    case SYM_LBRACKET:{
      jj_consume_token(SYM_LBRACKET);
      break;
      }
    case SYM_RBRACKET:{
      jj_consume_token(SYM_RBRACKET);
      break;
      }
    case SYM_SEMICOLON:{
      jj_consume_token(SYM_SEMICOLON);
      break;
      }
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      break;
      }
    case SYM_AND:{
      jj_consume_token(SYM_AND);
      break;
      }
    case SYM_OR:{
      jj_consume_token(SYM_OR);
      break;
      }
    case SYM_LESS:{
      jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESSEQUAL:{
      jj_consume_token(SYM_LESSEQUAL);
      break;
      }
    case SYM_EQUALEQUAL:{
      jj_consume_token(SYM_EQUALEQUAL);
      break;
      }
    case SYM_NOTEQUAL:{
      jj_consume_token(SYM_NOTEQUAL);
      break;
      }
    case SYM_GREATER:{
      jj_consume_token(SYM_GREATER);
      break;
      }
    case SYM_GREATEREQUAL:{
      jj_consume_token(SYM_GREATEREQUAL);
      break;
      }
    case SYM_PLUS:{
      jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      jj_consume_token(SYM_MINUS);
      break;
      }
    case SYM_MULTIPLICATION:{
      jj_consume_token(SYM_MULTIPLICATION);
      break;
      }
    case SYM_DIVIDE:{
      jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      jj_consume_token(SYM_MOD);
      break;
      }
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      break;
      }
    case SYM_DOT:{
      jj_consume_token(SYM_DOT);
      break;
      }
    case SYM_COMMA:{
      jj_consume_token(SYM_COMMA);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
  }

// Grammar
  final public void Program() throws ParseException {
    Goal();
{if ("" != null) return;}
  }

// FILLIN: Remainder of the grammar
  final public void Goal() throws ParseException {
    MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      ClassDeclaration();
    }
    jj_consume_token(0);
{if ("" != null) return;}
  }

  final public void MainClass() throws ParseException {
    jj_consume_token(KW_CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPARENTHESE);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LBRACKET);
    jj_consume_token(SYM_RBRACKET);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_RPARENTHESE);
    jj_consume_token(SYM_LBRACE);
    Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return;}
  }

  final public void ClassDeclaration() throws ParseException {
    jj_consume_token(KW_CLASS);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      VarDeclaration();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      MethodDeclaration();
    }
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return;}
  }

  final public void VarDeclaration() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return;}
  }

  final public void MethodDeclaration() throws ParseException {Token test = null;
    jj_consume_token(KW_PUBLIC);
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_LPARENTHESE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:{
      Type();
      jj_consume_token(IDENTIFIER);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        Type();
        jj_consume_token(IDENTIFIER);
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPARENTHESE);
    jj_consume_token(SYM_LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_LPARENTHESE:
      case SYM_NOT:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      if (jj_2_1(2)) {
        VarDeclaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPARENTHESE:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          Statement();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(KW_RETURN);
    Expression();
    jj_consume_token(SYM_SEMICOLON);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return;}
  }

  final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:{
      jj_consume_token(KW_INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:{
        jj_consume_token(SYM_LBRACKET);
        jj_consume_token(SYM_RBRACKET);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return;}
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPARENTHESE:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        Statement();
      }
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPARENTHESE);
      Expression();
      jj_consume_token(SYM_RPARENTHESE);
      Statement();
      if (jj_2_2(2)) {
        jj_consume_token(KW_ELSE);
        Statement();
      } else {
        ;
      }
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPARENTHESE);
      Expression();
      jj_consume_token(SYM_RPARENTHESE);
      Statement();
      break;
      }
    case KW_PRINT:{
      jj_consume_token(KW_PRINT);
      jj_consume_token(SYM_LPARENTHESE);
      Expression();
      jj_consume_token(SYM_RPARENTHESE);
      jj_consume_token(SYM_SEMICOLON);
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPARENTHESE:
    case SYM_NOT:
    case IDENTIFIER:
    case INT_LITERAL:{
      Expression();
      jj_consume_token(SYM_SEMICOLON);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return;}
  }

  final public void Expression() throws ParseException {
    AssignExpr();
{if ("" != null) return;}
  }

  final public void AssignExpr() throws ParseException {
    LogicOp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      AssignExpr();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
{if ("" != null) return;}
  }

  final public void LogicOp() throws ParseException {
    CmpOp();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:
      case SYM_OR:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:{
        jj_consume_token(SYM_AND);
        break;
        }
      case SYM_OR:{
        jj_consume_token(SYM_OR);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      CmpOp();
    }
{if ("" != null) return;}
  }

  final public void CmpOp() throws ParseException {
    AddOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:
      case SYM_LESSEQUAL:
      case SYM_NOTEQUAL:
      case SYM_GREATER:
      case SYM_GREATEREQUAL:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:{
        jj_consume_token(SYM_LESS);
        break;
        }
      case SYM_LESSEQUAL:{
        jj_consume_token(SYM_LESSEQUAL);
        break;
        }
      case SYM_NOTEQUAL:{
        jj_consume_token(SYM_NOTEQUAL);
        break;
        }
      case SYM_GREATER:{
        jj_consume_token(SYM_GREATER);
        break;
        }
      case SYM_GREATEREQUAL:{
        jj_consume_token(SYM_GREATEREQUAL);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      AddOp();
    }
{if ("" != null) return;}
  }

  final public void AddOp() throws ParseException {
    MulOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:{
        jj_consume_token(SYM_PLUS);
        break;
        }
      case SYM_MINUS:{
        jj_consume_token(SYM_MINUS);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      MulOp();
    }
{if ("" != null) return;}
  }

  final public void MulOp() throws ParseException {
    UnaryOp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIPLICATION:
      case SYM_DIVIDE:
      case SYM_MOD:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIPLICATION:{
        jj_consume_token(SYM_MULTIPLICATION);
        break;
        }
      case SYM_DIVIDE:{
        jj_consume_token(SYM_DIVIDE);
        break;
        }
      case SYM_MOD:{
        jj_consume_token(SYM_MOD);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      UnaryOp();
    }
{if ("" != null) return;}
  }

  final public void UnaryOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      UnaryOp();
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPARENTHESE:
    case IDENTIFIER:
    case INT_LITERAL:{
      PostfixOp();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return;}
  }

  final public void PostfixOp() throws ParseException {
    PrimaryExp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:
      case SYM_DOT:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:{
        jj_consume_token(SYM_LBRACKET);
        Expression();
        jj_consume_token(SYM_RBRACKET);
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        if (jj_2_3(3)) {
          jj_consume_token(SYM_DOT);
          Identifier();
          jj_consume_token(SYM_LPARENTHESE);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case KW_TRUE:
          case KW_FALSE:
          case KW_THIS:
          case KW_NEW:
          case SYM_LPARENTHESE:
          case SYM_NOT:
          case IDENTIFIER:
          case INT_LITERAL:{
            Expression();
            label_13:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case SYM_COMMA:{
                ;
                break;
                }
              default:
                jj_la1[25] = jj_gen;
                break label_13;
              }
              jj_consume_token(SYM_COMMA);
              Expression();
            }
            break;
            }
          default:
            jj_la1[26] = jj_gen;
            ;
          }
          jj_consume_token(SYM_RPARENTHESE);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SYM_DOT:{
            jj_consume_token(SYM_DOT);
            Identifier();
            break;
            }
          default:
            jj_la1[28] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
{if ("" != null) return;}
  }

  final public void PrimaryExp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case IDENTIFIER:{
      Identifier();
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      if (jj_2_4(2)) {
        jj_consume_token(KW_NEW);
        jj_consume_token(KW_INT);
        jj_consume_token(SYM_LBRACKET);
        Expression();
        jj_consume_token(SYM_RBRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_NEW:{
          jj_consume_token(KW_NEW);
          Identifier();
          jj_consume_token(SYM_LPARENTHESE);
          jj_consume_token(SYM_RPARENTHESE);
          break;
          }
        case SYM_LPARENTHESE:{
          jj_consume_token(SYM_LPARENTHESE);
          Expression();
          jj_consume_token(SYM_RPARENTHESE);
          break;
          }
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return;}
  }

  final public void Identifier() throws ParseException {Token t1 = null;
    t1 = jj_consume_token(IDENTIFIER);
{if ("" != null) return;}
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_3R_35()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_33()
 {
    if (jj_3R_34()) return true;
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_3R_24()) return true;
    return false;
  }

  private boolean jj_3R_29()
 {
    if (jj_3R_30()) return true;
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(KW_PRINT)) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(KW_WHILE)) return true;
    return false;
  }

  private boolean jj_3R_19()
 {
    if (jj_scan_token(KW_IF)) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    if (jj_scan_token(SYM_LBRACE)) return true;
    return false;
  }
